fix: 🐛 Fix overflow issue

--- a/src/pages/ProgramPage/styles/program.styl
+++ b/src/pages/ProgramPage/styles/program.styl
@@ -11,6 +11,7 @@
     justify-content flex-start
     margin 0
     grid-gap 0.5rem 0.5rem
+    flex-wrap wrap
   & .sz-cssgrid__track-label.sz-room.sz-room--45118
     border-bottom 1rem solid black
   & .sz-cssgrid__track-label.sz-room.sz-room--46682
